# edax

./: .buildinfo  Justfile  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/: index.rst.txt
_sources/eda/: create_report.rst.txt  introduction.ipynb.txt  plot_correlation.ipynb.txt
benchmark/: profiling.py
benchmark/benchmarks/: create_report_edax.py.disabled  lib.py  plot.py.disabled  plot_correlation.py.disabled  plot_correlation_x.py.disabled  plot_correlation_x_y.py.disabled  plot_missing.py.disabled  plot_missing_x.py.disabled  plot_missing_x_y.py.disabled  plot_x.py.disabled  plot_x_y.py.disabled
benchmark/results/: plot.json  plot_correlation.json  plot_correlation_x.json  plot_correlation_x_y.json  plot_missing.json  plot_missing_x.json  plot_missing_x_y.json  plot_x.json  plot_x_y.json  report.json  userstudy.csv
eda/: create_report.html  introduction.html  introduction.ipynb  plot_correlation.html  plot_correlation.ipynb
edax/: README.md  __init__.py  errors.py
edax/eda/: __init__.py  container.py  progress_bar.py  report.py
edax/eda/correlation/: __init__.py
edax/eda/create_report/: __init__.py
edax/eda/create_report/templates/: base.html
edax/eda/distribution/: __init__.py
edax/eda/missing/: __init__.py
edax/eda/missing/compute/: __init__.py
notebooks/: EDA SIGMOD User Study.ipynb  edax_tutorial.ipynb  self_comparison_overview.ipynb  self_comparison_subfunctions.ipynb
