[tool.poetry]
name = "edax"
version = "0.1"
description = "EDAx"
authors = ["anonymous authors"]
maintainers = []

license = "MIT"

readme = "README.md"  # Markdown files are supported

repository = "https://github.com/edatechreport/edax"
homepage = "https://github.com/edatechreport/edax"

keywords = ["eda", "data science", "exploratory data analysis", "data exploration"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Build Tools",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering",
    "Framework :: IPython",
]

[tool.poetry.dependencies]
python = "^3.6.1"

# Dependencies for EDA
dask = { version = "~2.25", extras = [ "complete" ]}
pandas = "~1.0"
numpy = "~1.19"
scipy = "~1.5"
bokeh = "~2.0"
nltk = "^3.5"
wordcloud = "~1.8"
pillow = "~7.2"
bottleneck = "^1.3.2"

[build-system]
requires = ["poetry>=1"]
build-backend = "poetry.masonry.api"
